--- a/Develop/index.html
+++ b/Develop/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div class="header">
+    <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <!--Links in the header-->
@@ -24,7 +24,7 @@
                 </li>
             </ul>
         </div>
-    </div>
+    </header>
     <div class="hero"></div>
     <div class="content">
         <!--Boxed descriptions of features on website-->
